--- a/Kasa/public/index.html
+++ b/Kasa/public/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/06c8d701cf.js"
       crossorigin="anonymous"
     ></script>
-    <title>React</title>
+    <title>React Kasa</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
